--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,126 @@
-<!-- In this file you are going to write the CSS code -->
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    text-decoration: none;
+    list-style-type: none;
+}
+
+#nav_list {
+    margin-top: o;
+    padding: 0;
+    overflow: hidden;
+    background-color: transparent;
+    opacity: 0.7;
+}
+
+.nav_bar {
+    position: sticky;
+}
+
+.transparent_nav ul {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.nav_bar li {
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    font-size: 17px;
+}
+
+.nav_bar li:hover {
+    background-color: lightsalmon;
+}
+
+.cta {
+    display: block;
+    overflow: hidden;
+    background-color: transparent;
+}
+
+.cta:hover {
+    background-color: lightsalmon;
+}
+
+.cta a {
+    float: right;
+    text-align: center;
+    padding: 14px 16px;
+}
+
+.cta p {
+    float: left;
+    text-align: center;
+    padding: 14px 16px;
+}
+
+.service_wrapper ul {
+    display: flex;
+    /* flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-between;*/
+}
+
+.service_wrapper li {
+    border: 1px #ccc solid;
+    padding: 10px;
+    align-items: center;
+    text-align: center;
+}
+
+
+/*.service_wrapper li {
+    height: 100px;
+    padding: 10px;
+    border: 1px solid green;
+    list-style-type: none;
+}*/
+
+.c1 img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+/*.recent_work img {
+    border: 1px solid gray;
+}*/
+
+.recent_work {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+}
+
+.testimonials_wrapper ul {
+    display: flex;
+    /* flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-between;*/
+}
+
+.testimonials_wrapper li {
+    padding: 10px;
+    align-items: center;
+    text-align: center;
+}
+
+footer {
+    background-color: lightgray;
+    margin: 10px;
+    padding: 10px;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+}
+
+.rights {
+    text-align: center;
+}
