--- a/styles/main.css
+++ b/styles/main.css
@@ -6,8 +6,8 @@
 }
 
 #nav_list {
-    margin-top: o;
-    padding: 0;
+    margin: 10px;
+    padding: 2px;
     overflow: hidden;
     background-color: transparent;
     opacity: 0.7;
@@ -17,7 +17,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: auto;
+    width: 100%;
 }
 
 .transparent_nav ul {
@@ -38,6 +38,7 @@
 
 .cta {
     display: block;
+    margin-top: 30px;
     overflow: hidden;
     background-color: transparent;
 }
