--- a/styles/main.css
+++ b/styles/main.css
@@ -119,7 +119,7 @@ footer {
     padding: 10px;
 }
 
-.footer {
+.footer_widget {
     display: flex;
     justify-content: space-around;
     flex-wrap: nowrap;
