--- a/styles/main.css
+++ b/styles/main.css
@@ -122,9 +122,15 @@ footer {
 .footer_widget {
     display: flex;
     justify-content: space-around;
-    flex-wrap: nowrap;
+    align-content: center;
+    flex-wrap: wrap;
+}
+
+.footer_widget div {
+    width: 25%;
 }
 
 .rights {
     text-align: center;
+    align-content: center;
 }
